DX/dev/force-app/main/default/objects/Event__c/Event__c.object-meta.xml
<CustomObject>
    <label>イベント</label>
    <nameField>
        <label>イベント名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>