DX/dev/force-app/main/default/objects/Event__c/fields/EventDate__c.field-meta.xml
<CustomField>
    <fullName>EventDate__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>開催日</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>