DX/dev/force-app/main/default/objects/Event__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <defaultValue>0</defaultValue>
    <label>会計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>