DX/dev/force-app/main/default/objects/Event__c/fields/VenueId__c.field-meta.xml
<CustomField>
    <fullName>VenueId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>会場</label>
    <referenceTo>Venue__c</referenceTo>
    <relationshipLabel>イベント</relationshipLabel>
    <relationshipName>EventktuG</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>