DX/dev/force-app/main/default/objects/Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>VenueId__c</columns>
    <columns>Payment__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>